--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>L | Data Analyst Portfolio</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f5f5f5; color: #333; }
-    header { background: #4f46e5; color: white; padding: 20px 0; text-align: center; }
+    header { background: #4f46e5; color: light pink; padding: 20px 0; text-align: center; }
     header h1 { margin: 0; font-size: 2em; }
     nav a { color: white; margin: 0 15px; text-decoration: none; font-weight: bold; }
     section { padding: 60px 20px; max-width: 1000px; margin: auto; }
@@ -19,7 +19,7 @@
 </head>
 <body>
   <header>
-    <h1>L | Data Analyst</h1>
+    <h1>Shreesha Chaguthi | Data Analyst</h1>
     <nav>
       <a href="#about">About</a>
       <a href="#projects">Projects</a>
