--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>Hi, I'm L. I’m a healthcare professional and data analyst major, passionate about turning complex datasets into actionable insights.</p>
+    <p>Hi, I'm Shreesha Chaguthi. I’m a healthcare professional and data analyst major, passionate about turning complex datasets into actionable insights.</p>
   </section>
 
   <section id="projects">
